--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: TeaShull Documentation
-email: timshull99@icloud.com
+title: Your awesome title
+email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -31,6 +31,7 @@ github_username:  jekyll
 
 # Build settings
 remote_theme: pages-themes/midnight@v0.2.0
+
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
