--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 
 title: TeaShull's GitHub Docs
-email: 
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+email: test@thisisonlyatest.emailsite.org
+description: ..testing..
 
 url: "https://teashull.github.io"
 github_username:  TeaShull
