--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,36 @@
+title: TeaShull's GitHub Docs
+email: test@thisisonlyatest.emailsite.org
+description: ..testing..
 
+url: "https://teashull.github.io"
+github_username:  TeaShull
+
+# Build settings
+remote_theme: pages-themes/midnight@v0.2.0
+
+plugins:
+  - jekyll-feed
+  - jekyll-remote-theme
+
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
 title: TeaShull's GitHub Docs
 email: test@thisisonlyatest.emailsite.org
 description: ..testing..
