change theme to slate

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ url: "https://teashull.github.io"
 github_username:  TeaShull
 
 # Build settings
-remote_theme: pages-themes/midnight@v0.2.0
+remote_theme: pages-themes/slate@v0.2.0
 
 plugins:
   - jekyll-feed
