--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,8 @@ plugins:
   - jekyll-feed
   - jekyll-remote-theme
 
+permalink: /:categories/:year/:month/:day/:title:output_ext
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
