--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ plugins:
 title: Tutorials Corner
 email: less.tact_0m@icloud.com
 description: Practical examples for pipelines I have written, and tutorials for common workflows in plant biology research. 
+collections_dir: .
 
 url: "https://teashull.github.io"
 github_username:  TeaShull
