--- a/_config.yml
+++ b/_config.yml
@@ -1,69 +1,20 @@
-title: TeaShull's GitHub Docs
-email: test@thisisonlyatest.emailsite.org
-description: ..testing..
+title: Your awesome title
+email: your-email@example.com
+description: >- # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jekyllrb
+github_username:  jekyll
 
-url: "https://teashull.github.io"
-github_username:  TeaShull
-
-# Build settings
-remote_theme: pages-themes/midnight@v0.2.0
+remote_theme: jekyll/minima
 
 plugins:
+  - jekyll-seo-tag
   - jekyll-feed
   - jekyll-remote-theme
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
-title: Tutorials Corner
-email: less.tact_0m@icloud.com
-description: Practical examples for pipelines I have written, and tutorials for common workflows in plant biology research. 
-collections_dir: .
-
-url: "https://teashull.github.io"
-github_username:  TeaShull
-
-# Build settings
-remote_theme: pages-themes/slate@v0.2.0
-
-plugins:
-  - jekyll-feed
-  - jekyll-remote-theme
-
-permalink: /:categories/:year/:month/:day/:title:output_ext
-
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+minima:
+  skin: dark
