--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
-title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+
+title: Tutorials Corner
+email: less.tact_0m@icloud.com
+description: Practical examples for pipelines I have written, and tutorials for common workflows in plant biology research. 
+url: "https://teashull.github.io"
+github_username:  TeaShull
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: " https://teashull.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 
 remote_theme: jekyll/minima
 
