--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 title: Tutorials Corner
 email: less.tact_0m@icloud.com
-
 description: >- # this means to ignore newlines until "baseurl:"
 Practical examples for pipelines I have written, and tutorials for common workflows in plant biology research.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: " https://teashull.github.io/"
+url: ""
 github_username:  TeaShull
 
 # Build settings
